<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/gambar1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/elden_ring"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image" />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="6dp"
            android:text="@string/_2022_02_25"
            android:textColor="@color/abu"
            android:textSize="15sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Judul" />

        <TextView
            android:id="@+id/textRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="26dp"
            android:drawableLeft="@drawable/star"
            android:text="4.9"
            android:textColor="@color/yellow"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image" />

        <TextView
            android:id="@+id/Genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="23dp"
            android:text="@string/action"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDate" />

        <TextView
            android:id="@+id/Genre2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="23dp"
            android:text="@string/rpg"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@id/Genre"
            app:layout_constraintTop_toBottomOf="@+id/textDate" />

        <TextView
            android:id="@+id/textAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/about_game"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/Genre"
            app:layout_constraintTop_toBottomOf="@id/Genre" />

        <TextView
            android:id="@+id/DetailAbout"
            android:layout_width="366dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:lineSpacingExtra="1.4dp"
            android:text="@string/content"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textAbout" />

        <TextView
            android:id="@+id/Developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="33dp"
            android:text="@string/dev"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/DetailAbout" />

        <TextView
            android:id="@+id/textDev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="12dp"
            android:text="@string/fs"
            android:textColor="@color/blue"
            android:textSize="17sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Developer" />

        <TextView
            android:id="@+id/Publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="12dp"
            android:text="@string/publish"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textDev" />

        <TextView
            android:id="@+id/textPub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="12dp"
            android:text="@string/bandai_namco_entertainment"
            android:textColor="@color/red"
            android:textSize="17sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Publisher" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="22dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/textPub"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="22dp"
            tools:listitem="@layout/view_image" />

        <Button
            android:id="@+id/button"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_margin="28dp"
            android:backgroundTint="@color/green"
            android:gravity="center"
            android:text="@string/add_to_favorite"
            android:textAllCaps="false"
            android:textSize="17sp"
            app:layout_constraintCircleRadius="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>